[package]
name = "runci"
version = "0.0.0"
edition = "2021"
authors = ["WumaCoder 1829913225@qq.com>"]
description = "A ci tools for rust."
publish = true
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gittore/runci"
repository = "https://github.com/gittore/runci.git"
keywords = ["cli", "ci"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
